--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,13 +13,13 @@
   "categories": ["business", "finance", "productivity"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -82,4 +82,4 @@
       "form_factor": "narrow"
     }
   ]
-} 
+}
